--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>Simple Calculator</h1>
-  <p>Just a simple calculator to practice HTML, CSS and JS Vanilla.</p>
+  <p>Just a simple calculator to practice HTML, CSS and JS Vanilla. =)</p>
   <div class="container">
     <div class="screen"></div>
     <div class="button-wrapper">
