create a calc design

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Simple Calculator</h1>
   <p>Just a simple calculator to practice HTML, CSS and JS Vanilla. =)</p>
   <div class="container">
-    <div class="screen"></div>
+    <div class="screen">0.0000</div>
     <div class="button-wrapper">
       <div class="button">%</div>
       <div class="button">/</div>
