add modern script tag defer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simple Calculator</title>
   <link rel="stylesheet" href="./styles.css">
+  <script src="./script.js" defer></script>
 </head>
 <body>
   <h1>Simple Calculator</h1>
@@ -43,6 +44,5 @@
       <div class="button">=</div>
     </div>
   </div>
-  <script src="./script.js"></script>
 </body>
 </html>
