--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
   <p>Just a simple calculator to practice HTML, CSS and JS Vanilla. =)</p>
   <div class="container">
     <div class="screen">0.0000</div>
-    <div class="button-wrapper">
+    <div class="button-wrapper disable-select">
       <div class="button">%</div>
       <div class="button">/</div>
       <div class="button">&lt;=</div>
       <div class="button">C</div>
     </div>
-    <div class="button-wrapper">
+    <div class="button-wrapper disable-select">
       <div class="button">7</div>
       <div class="button">8</div>
       <div class="button">9</div>
-      <div class="button">x</div>
+      <div class="button">*</div>
     </div>
-    <div class="button-wrapper">
+    <div class="button-wrapper disable-select">
       <div class="button">4</div>
       <div class="button">5</div>
       <div class="button">6</div>
       <div class="button">-</div>
     </div>
-    <div class="button-wrapper">
+    <div class="button-wrapper disable-select">
       <div class="button">1</div>
       <div class="button">2</div>
       <div class="button">3</div>
       <div class="button">+</div>
     </div>
-    <div class="button-wrapper">
+    <div class="button-wrapper disable-select">
       <div class="button">+/-</div>
       <div class="button">0</div>
       <div class="button">.</div>
